@@ -33,8 +33,9 @@ class DatabaseTestCase(unittest.TestCase):
         self.assertEqual(None, self.db.get('foo/bar'))
 
     def test_unicode(self):
-        self.db[u'føø'] = {u'bår': u'Iñtërnâtiônàlizætiøn'}
+        self.db[u'føø'] = {u'bår': u'Iñtërnâtiônàlizætiøn', 'baz': 'ASCII'}
         self.assertEqual(u'Iñtërnâtiônàlizætiøn', self.db[u'føø'][u'bår'])
+        self.assertEqual(u'ASCII', self.db[u'føø'][u'baz'])
 
     def test_doc_revs(self):
         doc = {'bar': 42}
